# EdgeViewAR

./: CMakeLists.txt  README.md
app/: MainActivity.java  NativeBridge.java
gl/: GLUtils.cpp  TextureRenderer.cpp
jni/: image_processor.cpp  image_processor.h  native-lib.cpp
